<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mdnappz.lbr.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/lina"
    android:id="@+id/mainLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditedHelloWorld"
        android:padding="20dp"
        android:textSize="25sp"
        android:id="@+id/textHelloWorld"
        android:gravity="center"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/SecondHelloWorld"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_gravity="center"
        android:padding="15dp">

        <Button
            android:text="@string/blueAndBlack1"
            android:layout_column="0"
            android:layout_row="0"
            android:id="@+id/button1"
            />
        <Button
            android:text="@string/blueAndBlack2"
            android:layout_column="1"
            android:layout_row="0"
            android:id="@+id/button2"
            />
        <Button
            android:text="@string/blueAndBlack3"
            android:layout_column="0"
            android:layout_row="1"
            android:id="@+id/button3"
            />
        <Button
            android:text="@string/blueAndBlack4"
            android:layout_column="1"
            android:layout_row="1"
            android:id="@+id/button4"
            />
        <Button
            android:text="@string/blueAndBlack5"
            android:layout_column="0"
            android:layout_row="2"
            android:id="@+id/button5"
            />
        <Button
            android:text="@string/blueAndBlack6"
            android:layout_column="1"
            android:layout_row="2"
            android:id="@+id/button6"
            />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testString"
        android:padding="15dp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linaToggle"
        android:text="@string/hideLina"
        android:onClick="linaToggle"
        android:layout_gravity="center"/>

</LinearLayout>
